[package]
name = "ncp-metrics-exporter"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "A custom prometheus metrics exporter for NCP"
homepage = "https://nextcloudpi.com"
repository = "https://github.com/theCalcaholic/ncp-metrics-exporter"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client = "0.15"
proc-mounts = "0.2.4"
regex = "1.5.4"
tide = "0.16.0"
chrono = "0.4.19"
serde_json = "1.0.79"
failure = "0.1.8"

[dependencies.async-std]
version = "1.10.0"
features = ["attributes"]
